Documentation edits made through Mintlify web editor

--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -17,10 +17,10 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 <Steps>
   <Step title="Locate your VPS in the control panel">
     Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank">
-    EDBB Control Panel</a>
+     EDBB Control Panel</a>
 
     , go to <strong>Services</strong>
-    , and choose the VPS you need to reinstall.
+     , and choose the VPS you need to reinstall.
   </Step>
   <Step title="Switch to Installation tab → Select Automated Installers">
     Use the <strong>Installation</strong>
@@ -50,7 +50,7 @@ import { CtaButton } from "/snippets/cta-button.mdx";
   </Step>
   <Step title="Set password and launch">
     Enter a password (or paste an SSH public key) and click <strong>Start the installation</strong>
-    . Our dashboard launches the installation and shows a progress-bar.
+     . Our dashboard launches the installation and shows a progress-bar.
   </Step>
 </Steps>
 
@@ -76,6 +76,6 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ## Need a Custom Image Instead?
 
-Prefer to upload your own qcow2 template or run cloud-init automation? Use the Cloud-Init workflow to keep full control over first boot actions.
+Prefer to Bring Your Own .qcow2 image and/or run a cloud-init automation? Use the Cloud-Init workflow to keep full control over first boot actions.
 
 <CtaButton label="Provision with Cloud-Init" link="../vps-management/edis-cloud-init-vps-installation" />
