--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -62,10 +62,10 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 ## Track Progress & Reconnect
 
-| OS          | Approx. time | What happens / What to do                                                                                                         |
-| ----------- | ------------ | --------------------------------------------------------------------------------------------------------------------------------- |
-| **Linux**   | **≈ 5 min**  | AutoInstall provisions and reboots automatically — no extra clicks required. SSH is blocked during installation.                  |
-| **Windows** | **≈ 15 min** | When the status changes to _Running_, reconnect via **RDP** using the new credentials. RDP access is blocked during installation. |
+| OS          | Approx. time | What happens / What to do                                                                                                                                                    |
+| ----------- | ------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **Linux**   | **≈ 5 min**  | AutoInstall provisions and reboots automatically — no extra clicks required. SSH is blocked during installation. Linux typically finishes installation in 5 minutes.         |
+| **Windows** | **≈ 15 min** | RDP access is blocked during installation. When the status changes to _Running_, connect via **RDP** using the new credentials. Windows usually takes 15 minutes to install. |
 
 <info>
   The **Installation** tab streams logs while the image is provisioned. SSH/RDP ports stay closed until the job finishes.\
