--- a/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
+++ b/vps-management/autoinstall-reinstall-install-vps-linux-windows.mdx
@@ -64,8 +64,8 @@ import { CtaButton } from "/snippets/cta-button.mdx";
 
 | OS          | Approx. time | What happens / What to do                                                                                                                                                    |
 | ----------- | ------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **Linux**   | **≈ 5 min**  | AutoInstall provisions and reboots automatically — no extra clicks required. SSH is blocked during installation. Linux typically finishes installation in 5 minutes.         |
-| **Windows** | **≈ 15 min** | RDP access is blocked during installation. When the status changes to _Running_, connect via **RDP** using the new credentials. Windows usually takes 15 minutes to install. |
+| **Linux**   | **≈ 5 min**  | AutoInstall provisions and reboots automatically — no extra clicks required. SSH is blocked during installation. Linux typically finishes installation in 5 minutes. When the status changes to _Running_, connect via **SSH** using the new root password.         |
+| **Windows** | **≈ 15 min** | RDP access is blocked during installation. When the status changes to _Running_, connect via **RDP** using the new Administrator password. Windows usually takes 15 minutes to install. |
 
 <info>
   The **Installation** tab streams logs while the image is provisioned. SSH/RDP ports stay closed until the job finishes.\
