Documentation edits made through Mintlify web editor

--- a/faq/billing-lifecycle/cancel-a-service.mdx
+++ b/faq/billing-lifecycle/cancel-a-service.mdx
@@ -1,34 +1,41 @@
 ---
-title: "Cancel an EDBB VPS"
-description: "Step-by-step instructions for cancelling your EDBB VPS with immediate or end-of-term options, including timelines for data deletion."
+title: "VPS Cancellation"
+description: "Cancel your VPS service in the control panel. Easy step-by-step instructions, including expiration and immediate cancellation options. Includes timelines for data deletion."
 sidebarTitle: "Cancel a VPS"
 ---
 
-# End a VPS Subscription
+## How to cancel your VPS
 
-You can cancel any EDBB VPS directly from the portal. The request takes effect immediately or at the end of the current billing cycle—your choice.
+Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation **and the time when your cancellation request should take effect. Options are _immediate cancellation_ or _expiration_ (cancellation at the end of the paid timeframe) - your choice.
 
 ---
 
 ## Before You Cancel
 
-<Info>
+<Warning>
   Cancellation is irreversible once the six-day retention window passes. Take fresh backups and confirm the correct VPS by double-checking the Primary IPv4 and plan details in the right-hand summary panel.
-</Info>
+</Warning>
 
 ---
 
-## Submit the Cancellation in the Portal
+## Submit the Cancellation request in the Control Panel
 
 <Steps>
-  <Step title="Sign in to the portal">
-    Open the <a href="https://my.edbb.com/clientarea.php" target="_blank">EDBB VPS Portal</a> and go to <strong>Services → My Products</strong>.
+  <Step title="Sign in to the control panel">
+    Open the <a href="https://my.edbb.com/clientarea.php" target="_blank">
+     EDBB VPS Portal</a>
+
+    and go to <strong>Services → My Products</strong>
+     .
   </Step>
   <Step title="Open the VPS record">
     Click the service you want to cancel to view its management dashboard.
   </Step>
   <Step title="Choose Request Cancellation">
-    In the right-hand panel, press the red <strong>Request Cancellation</strong> button. Select whether the VPS should stop <strong>immediately</strong> or <strong>at the end of the billing period</strong>.
+    In the right-hand panel, press the red <strong>Request Cancellation</strong>
+     button. Select whether the VPS should stop <strong>immediately</strong>
+     or <strong>at the end of the billing period</strong>
+     .
   </Step>
   <Step title="Confirm the request">
     Submit the form. The portal updates the service status and sends a confirmation email showing the chosen cancellation date.
@@ -41,10 +48,10 @@ If you change your mind before data deletion occurs, contact Support via the mes
 
 ## Pick the Timing That Fits
 
-| Option | When it executes | What changes immediately | Data removal |
-| --- | --- | --- | --- |
-| **Cancel on expiry** | Service keeps running until the current due date | Renewal invoice for the next term is cancelled | VPS is deleted **6 days after** the due date |
-| **Cancel immediately** | Shutdown happens as soon as you confirm the request | The VPS powers off and access stops right away | VPS is deleted **6 days after** the request |
+| Option                 | When it executes                                    | What changes immediately                       | Data removal                                 |
+| ---------------------- | --------------------------------------------------- | ---------------------------------------------- | -------------------------------------------- |
+| **Cancel on expiry**   | Service keeps running until the current due date    | Renewal invoice for the next term is cancelled | VPS is deleted **6 days after** the due date |
+| **Cancel immediately** | Shutdown happens as soon as you confirm the request | The VPS powers off and access stops right away | VPS is deleted **6 days after** the request  |
 
 Once the deletion window passes, snapshots and disk data cannot be recovered.
 
