Documentation edits made through Mintlify web editor

--- a/faq/billing-lifecycle/cancel-a-service.mdx
+++ b/faq/billing-lifecycle/cancel-a-service.mdx
@@ -6,7 +6,7 @@ sidebarTitle: "Cancel a VPS"
 
 ## How to cancel your VPS
 
-Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation **and the time when your cancellation request should take effect. Options are _immediate cancellation_ or _expiration_ (cancellation at the end of the paid timeframe) - your choice.
+Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation** and the time when your cancellation request should take effect. Options are **immediate** **cancellatio_n_** or **expiration** (cancellation at the end of the paid timeframe) - your choice.
 
 ---
 
@@ -38,7 +38,7 @@ Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation
      .
   </Step>
   <Step title="Confirm the request">
-    Submit the form. The portal updates the service status and sends a confirmation email showing the chosen cancellation date.
+    Submit the form. The portal updates the service status and sends an email confirming your cancellation and the chosen cancellation option (immediate/expiry)
   </Step>
 </Steps>
 
