Documentation edits made through Mintlify web editor

--- a/faq/billing-lifecycle/cancel-a-service.mdx
+++ b/faq/billing-lifecycle/cancel-a-service.mdx
@@ -6,7 +6,7 @@ sidebarTitle: "Cancel a VPS"
 
 ## How to cancel your VPS
 
-Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation** and the time when your cancellation request should take effect. Options are **immediate** **cancellatio_n_** or **expiration** (cancellation at the end of the paid timeframe) - your choice.
+Cacel your EDBB VPS directly in the control panel. Select **Request Cancellation** and the time when your cancellation request should take effect. Options are **immediate** **cancellation** or **expiration** (cancellation by the end of the paid timeframe) - your choice.
 
 ---
 
