--- a/how-our-support-team-helps-you.mdx
+++ b/how-our-support-team-helps-you.mdx
@@ -10,7 +10,6 @@ description: "Understand how EDBB Support assists with billing, troubleshooting 
   Our support team is your first point of contact for all billing-related inquiries and technical assistance. We’re here to provide quick and effective solutions and expert guidance, ensuring a smooth experience.
 </Info>
 
-
 ## What We Handle (and How)
 
 - 💬 **Billing & Accounts** – Questions about invoices, payments, or account management. We’ve got you covered.
@@ -22,15 +21,15 @@ Whichever channel you prefer - live messenger or email - we’ll respond with cl
 
 ---
 
-## **Support Boundaries for Your Security 🚫**
+## **Support Boundaries for Your Security **
 
 To ensure your privacy and security, our infrastructure-focused support does not include:
 
-- Logging into your VPS, databases or downstream services
-- Installing software or patches
-- Changing configurations
-- Updating passwords or ports
-- Migrating servers to another account or location
+- 🚫 Logging into your VPS, databases or downstream services
+- 🚫 Installing software or patches
+- 🚫 Changing configurations
+- 🚫 Updating passwords or ports
+- 🚫 Migrating servers to another account or location
 
 We strictly operate as an infrastructure provider and do not access customer servers or perform software configurations. This ensures your data remains secure and private.
 
@@ -40,13 +39,16 @@ We strictly operate as an infrastructure provider and do not access customer ser
 
 Managing server-related tasks can be challenging. Here are the best ways to get assistance:
 
-#### Explore Our Knowledge Base 📚 
+#### Explore Our Knowledge Base 📚
+
 Visit our Knowledge Base for articles and guides on troubleshooting, configurations, and more.
 
 #### Bring in a Systems Expert
+
 For custom stacks, migrations, audits, or security hardening, partner with a trusted freelancer or managed service provider who can work hands-on within your VPS.
 
 #### Tap into the Community
+
 VPS forums, sysadmin groups, and professional networks often have real-world advice from peers running similar workloads.
 
 ---
