Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -19,7 +19,7 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
 **A — Traffic Pool Balance**: shows remaining TB and provides a button to <strong>Top up</strong>
  the pool.\
 **B — Manual Hydration**: manually assign portions of +100 GB, +500 GB, +1 TB, or +10 TB to the selected VPS.\
-**C — Auto Hydration**: choose a profile (e.g., +100 GB). The system automatically adds e.g. +100GB at 99% traffic usage levels.
+**C — Auto Hydration**: choose a profile (e.g., +100 GB). The system automatically adds e.g. +100GB to your VPS at 99% traffic usage levels.
 
 ---
 
