Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -10,7 +10,7 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
   The traffic pool is like a bank account holding a traffic reserve. Top-up your account and assign traffic to any VPS in your account when needed.
 </Info>
 
-- Pool traffic never expires.
+- Unused Pool Traffic does not expire.
 - Assignments take effect instantly and appear in the hydration log.
 - Auto hydration refills a VPS the moment it reaches 99% usage.
 
@@ -23,11 +23,11 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
 
 ---
 
-
-## Monitor, Refill, and Stay Ahead
+## Monitor and Refill
 
 - Check pool balance and assignment history via the **Hydration log** and **Pool log** buttons.
-- Email alerts fire at 80%, 90%, and 100% pool usage; top up before the balance is exhausted.
-- Combine pool top-ups with plan upgrades if your baseline traffic requirement grows over time.
+- Email alerts fire at 80% pool usage; top up before the traffic pool is exhausted.
+- Combine traffic pool with plan upgrades if your baseline traffic requirement grows over time.
 
-Need more detail on usage graphs and throttling rules? See [Traffic Stats & Monthly Refills](./traffic-stats-refill-explained) and [Exceeded Monthly Traffic](./exceeding-monthly-traffic-limit-edis-global).
+Need more detail on usage graphs and throttling rules? \
+See [Traffic Stats & Monthly Refills](./traffic-stats-refill-explained) and [Exceeded Monthly Traffic](./exceeding-monthly-traffic-limit-edis-global).
