Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Traffic Pool"
 description: "Learn how EDBB traffic pool works, how to assign traffic to your VPS (manually or automatically)"
 ---
 
-## What Is a Traffic Pool?
+## What Is a Traffic Pool
 
 <Info>
   The traffic pool is like a bank account holding a traffic reserve. Top-up your account and assign traffic to any VPS in your account when needed.
@@ -20,6 +20,16 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
  the pool.\
 **B — Manual Hydration**: manually assign portions of +100 GB, +500 GB, +1 TB, or +10 TB to the selected VPS.\
 **C — Auto Hydration**: choose a profile (e.g., +100 GB). The system automatically adds e.g. +100GB to your VPS at 99% traffic usage levels.
+
+---
+
+## Where to start
+
+🛒 Purchase Traffic: Choose the amount of traffic you need and [Top Up](https://manage.edisglobal.com/cart.php?gid=214) your Traffic Pool.
+
+📌 Assign Traffic: Once payment is complete, head to the **Traffic** **tab** in your control panel to assign traffic to your service. Use +100GB, +500GB, +1TB, +10TB buttons for **manual hydration**.
+
+⚙️ Enable Auto-Hydration:  Enable Auto-Hydration for automatic traffic refills to your VPS when usage hits 99%.
 
 ---
 
