Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -11,8 +11,17 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
 </Info>
 
 - Unused Pool Traffic does not expire.
-- Assignments take effect instantly and appear in the hydration log.
-- Auto hydration refills a VPS the moment it reaches 99% usage.
+- Hydration assigns traffic to a VPS (manual or auto at 99% usage)
+- Traffic purchases are instant and are logged in the pool log.
+- Traffic assignments are instant and are logged in the hydration log
+
+## How to Start
+
+**🛒 Purchase Traffic**: Choose the amount of traffic you need and [Top Up](https://manage.edisglobal.com/cart.php?gid=214) your Traffic Pool.
+
+**📌 Assign Traffic**: Once payment is complete, head to the **Traffic** **tab** in your control panel to assign traffic to your VPS. Use +100GB, +500GB, +1TB, +10TB buttons for **Manual Hydration**.
+
+**📌 Enable Auto-Hydration:**  Enable Auto-Hydration for automatic traffic assignment when usage reaches 99%.
 
 ![Traffic hydration controls](/assets/traffic-pool-edbb-manual-auto-hydration.png)
 
@@ -20,16 +29,6 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
  the pool.\
 **B — Manual Hydration**: manually assign portions of +100 GB, +500 GB, +1 TB, or +10 TB to the selected VPS.\
 **C — Auto Hydration**: choose a profile (e.g., +100 GB). The system automatically adds e.g. +100GB to your VPS at 99% traffic usage levels.
-
----
-
-## Where to start
-
-🛒 Purchase Traffic: Choose the amount of traffic you need and [Top Up](https://manage.edisglobal.com/cart.php?gid=214) your Traffic Pool.
-
-📌 Assign Traffic: Once payment is complete, head to the **Traffic** **tab** in your control panel to assign traffic to your service. Use +100GB, +500GB, +1TB, +10TB buttons for **manual hydration**.
-
-⚙️ Enable Auto-Hydration:  Enable Auto-Hydration for automatic traffic refills to your VPS when usage hits 99%.
 
 ---
 
