Documentation edits made through Mintlify web editor

--- a/faq/traffic-bandwidth/traffic-pool.mdx
+++ b/faq/traffic-bandwidth/traffic-pool.mdx
@@ -15,7 +15,7 @@ description: "Learn how EDBB traffic pool works, how to assign traffic to your V
 - Traffic purchases are instant and are logged in the pool log.
 - Traffic assignments are instant and are logged in the hydration log
 
-## How to Start
+## How to Get Started
 
 **🛒 Purchase Traffic**: Choose the amount of traffic you need and [Top Up](https://manage.edisglobal.com/cart.php?gid=214) your Traffic Pool.
 
